k8s/bases/findingway/bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
  namespace: findingway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: findingway
      component: bot
  template:
    metadata:
      labels:
        app: findingway
        component: bot
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
      - name: github
      containers:
      - name: bot
        image: ghcr.io/naurffxiv/findingway/bot:sha-440d079
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
