k8s/bases/findingway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: findingway
  namespace: findingway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: findingway
  template:
    metadata:
      labels:
        app: findingway
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: findingway
        image: ghcr.io/veraticus/findingway:main
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
