k8s/bases/findingway/poster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poster
  namespace: findingway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: findingway
      component: poster
  template:
    metadata:
      labels:
        app: findingway
        component: poster
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
      - name: github
      containers:
      - name: poster
        image: ghcr.io/naurffxiv/findingway/poster:sha-047e78c
        resources:
          requests:
            memory: "128Mi"
            cpu: "125m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
