k8s/bases/findingway/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-admin-prefix
  namespace: findingway
spec:
  stripPrefix:
    prefixes:
      - /admin
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-receiver-prefix
  namespace: findingway
spec:
  stripPrefix:
    prefixes:
      - /receiver
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: findingway
  namespace: findingway
  annotations:
    kubernetes.io/ingress.class: findingway
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`findingway.io`) && PathPrefix(`/admin`)
      kind: Rule
      priority: 20
      services:
        - name: admin
          port: 80
      middlewares:
        - name: strip-admin-prefix
    - match: Host(`findingway.io`) && PathPrefix(`/receiver`)
      kind: Rule
      priority: 10
      services:
        - name: receiver
          port: 80
      middlewares:
        - name: strip-receiver-prefix
    - match: Host(`findingway.io`)
      kind: Rule
      priority: 1
      services:
        - name: site
          port: 80
